# emulatte

./: CMakeLists.txt  README.md
include/emulatte/: cpu.hpp  fundamentals.hpp
source/: main.cpp
